2/3 done for LLC

--- a/iowa.html
+++ b/iowa.html
@@ -102,7 +102,7 @@
                         </li>
                     </ul>
                     <p class="GDF-steps_modal_text">
-						An advantage to having an AL LLC with multiple members is that the members decide how to report profits and losses for tax purposes and have several options as to how they prefer to be taxed.
+						An advantage to having an Iowa LLC with multiple members is that the members decide how to report profits and losses for tax purposes and have several options as to how they prefer to be taxed.
                     </p>
                     <p class="GDF-steps_modal_text">
 						For federal tax purposes, if you’re the sole member of an LLC, your business is treated as a <a class="GDF-steps_modal_link" href="https://www.govdocfiling.com/llc-formation/">disregarded entity</a>. This means that although you and your business are separate entities, the SMLLC’s income and expenses are reported on the owner’s personal tax return rather than an SMLLC tax return, and the IRS ignores the SMLLC’s status as a business entity. However, for purposes of employment tax and certain excise taxes, an SMLLC is still considered a separate entity. The way a sole proprietorship is taxed is the IRS’ default option for a single member LLC in Iowa.
