--- a/California-LLC.html
+++ b/California-LLC.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="./css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="./css/slick.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style-with-svg.css" />
     <link rel="stylesheet" href="./css/center-image.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
