SCorp preparation with extra steps and step shifts

--- a/Utah-LLC.html
+++ b/Utah-LLC.html
@@ -686,7 +686,7 @@
                     </div>
                     <div class="GDF-steps-main">
                         <h4 class="GDF-steps_modal_h4">
-                            File an Annual Report
+                            File an Annual Renewal
                         </h4>
                             <p class="GDF-steps_modal_text GDF-steps_modal_info">
                                 Most states require that all LLC owners file a report that updates all the information that the State has on file. This report is usually called an Annual Report, but in Utah, it is called an Annual Renewal. Also, Utah does not have a Secretary of State office. Instead, various state agencies and offices take care of any Utah government needs. More information on those agencies and offices can be found <a href="https://www.utah.gov/government/secretary-of-state.html">here.</a>
@@ -729,7 +729,7 @@
                                     <span class="GDF-steps_counter_last_number">/11</span>
                                 </div>
                                 <h4 class="GDF-steps_title">
-                                    File an Annual Report
+                                    File an Annual Renewal
                                 </h4>
                                 <p class="GDF-text">
                                     Most states require that all LLC owners file a report that updates all the information that the State has on file. This report is usually called an Annual Report, but in Utah, it is called an Annual Renewal.
@@ -904,7 +904,7 @@
                             business or you might be eligible for.
                         </p>
                         <p class="GDF-steps_modal_text">
-                            Lastly, you can invite new members to your team. If you could see your businesses strategy succeeding with a partner or multiple partners, pool together your financial resources with another member to support your startup. An advantage to this funding option is your partner(s) may come with their own social network of business contacts and possibly even their own potential investors. To protect yourself, you can adjust your   <span class="italic">State of Utah LLC Operating Agreement</span> and ensure that you are still the primary owner of the LLC.
+                            Lastly, you can invite new members to your team. If you could see your businesses strategy succeeding with a partner or multiple partners, pool together your financial resources with another member to support your startup. An advantage to this funding option is your partner(s) may come with their own social network of business contacts and possibly even their own potential investors. To protect yourself, you can adjust your <span class="italic">State of Utah LLC Operating Agreement</span> and ensure that you are still the primary owner of the LLC.
                         </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
