--- a/Utah-SCorp.html
+++ b/Utah-SCorp.html
@@ -783,11 +783,11 @@
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
-                            Easiest way to form your Utah LLC online
+                            Easiest way to form your Utah S corp online
                         </p>
                         <div class="GDF-steps_modal_footer_btn_wrapper">
                             <a class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-CTA-ACF"
-                                href="https://app.govdocfiling.com/LLC">
+                                href="https://app.govdocfiling.com/SCorporation">
                                 Start Now
                             </a>
                         </div>
@@ -1322,11 +1322,11 @@
                             Begin Operating Your Business
                         </h4>
                         <p class="GDF-steps_modal_text GDF-steps_modal_info">
-                            After starting an LLC business in Utah, make sure to keep your LLC compliant. To do so, keep track of all important dates, such as those for filing annual documents and license/permit renewals, and pay all necessary UT LLC fees. If you’d rather not do these tasks yourself, you can sign up for a service that will automatically send you alerts ahead of crucial state and federal filing deadlines. Likewise, you can hire an accountant, a tax professional, and/or an attorney to ensure you are not making errors when keeping records, filling out paperwork, and making payments.
+                            Once you become an official Utah corporation, make sure you keep your S corp compliant. Remember all important dates and make all necessary payments on time. Know all of the laws regarding the issuing of stocks. Host all necessary annual meetings. This is mandatory if you don’t want your new business to run into any issues. If you’d rather not do these tasks yourself, you can sign up for a service that will automatically send you alerts ahead of crucial state and federal filing deadlines. Likewise, you can hire an accountant, a tax professional, and/or an attorney to ensure you are not making errors when keeping records, filling out paperwork, and making payments.
                         </p>
                     </div>
                     <p class="GDF-steps_modal_text">
-                        You can begin operating your business in Utah with peace of mind, knowing that you are protected by an LLC in case anything unforeseeable affects your new business venture.
+                        Next, make sure you’ve obtained all necessary permits, licenses, and insurances that your UT corp might need—and you’re good to go! Begin operating your Utah business with peace of mind, knowing that you are protected by an S corp in case anything unforeseeable affects your new business venture.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
