--- a/Utah-SCorp.html
+++ b/Utah-SCorp.html
@@ -269,7 +269,7 @@
                     <p class="GDF-steps_modal_text">
                         If you know your LLC will have employees, you also know that you will have to pay them. Plus, you will need to figure out the amount you should deduct from their wages for tax purposes. Employees will need to fill out a W-4 Form, and you will need to give them pay stubs with their tax information. Before this all gets overwhelming, keep in mind that we offer Payroll, Tax and HR compliance solutions with
                         <a class="GDF-steps_modal_link" href="https://www.govdocfiling.com/adp-solutions">our partner, ADP.</a>
-                        We make it easy to pay your employees, track time, and file taxes effortlessly. Plus, you and your employees can view and update payroll information via an app--accessible anywhere, anytime, backed by 24/7 live customer service support.
+                        We make it easy to pay your employees, track time, and file taxes effortlessly. Plus, you and your employees can view and update payroll information via an app-accessible anywhere, anytime, backed by 24/7 live customer service support.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
@@ -318,10 +318,10 @@
             </div>
         </div>-->
         <div class="GDF-steps_slide">
-            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_three_slide" data-close="cl3">
+            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_two_slide" data-close="cl2">
                 <div class="GDF-steps_modal_content GDF-steps_modal_two">
                     <div class="GDF-steps_header">
-                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_two" data-close="cl3">
+                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_two" data-close="cl2">
                         </button>
                     </div>
                     <div class="GDF-steps-main">
@@ -362,7 +362,7 @@
                     </div>
                 </div>
             </div>
-            <div class="GDF-steps_content_wrapper GDF-step_three" data-close="cl3">
+            <div class="GDF-steps_content_wrapper GDF-step_three" data-close="cl2">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -385,7 +385,7 @@
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
-                                        id="GDF-btn_more_three" data-close="cl3">
+                                        id="GDF-btn_more_two" data-close="cl2">
                                         Learn more
                                     </button>
                                 </div>
@@ -396,10 +396,10 @@
             </div>
         </div>
         <div class="GDF-steps_slide">
-            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_three_slide" data-close="cl5">
+            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_three_slide" data-close="cl3">
                 <div class="GDF-steps_modal_content GDF-steps_modal_three">
                     <div class="GDF-steps_header">
-                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_three" data-close="cl5">
+                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_three" data-close="cl3">
                         </button>
                     </div>
                     <div class="GDF-steps-main">
@@ -419,7 +419,7 @@
                         <a class="GDF-steps_modal_link" href="mailto:info@govdocfiling.com">info@govdocfiling.com</a>.
                     </p>
                     <p class="GDF-steps_modal_text">
-                        If you know your S corp will have employees, you also know that you will have to pay them. Plus, you will need to figure out the amount you should deduct from their wages for tax purposes. Employees will need to fill out a W-4 Form, and you will need to give them pay stubs with their tax information. Before this all gets overwhelming, keep in mind that we offer Payroll, Tax and HR compliance solutions with <a href="https://www.govdocfiling.com/adp-solutions">our partner, ADP</a>. We make it easy to pay your employees, track time, and file taxes effortlessly. Plus, you and your employees can view and update payroll information via an app--accessible anywhere, anytime, backed by 24/7 live customer service support.
+                        If you know your S corp will have employees, you also know that you will have to pay them. Plus, you will need to figure out the amount you should deduct from their wages for tax purposes. Employees will need to fill out a W-4 Form, and you will need to give them pay stubs with their tax information. Before this all gets overwhelming, keep in mind that we offer Payroll, Tax and HR compliance solutions with <a href="https://www.govdocfiling.com/adp-solutions">our partner, ADP</a>. We make it easy to pay your employees, track time, and file taxes effortlessly. Plus, you and your employees can view and update payroll information via an app-accessible anywhere, anytime, backed by 24/7 live customer service support.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
@@ -434,7 +434,7 @@
                     </div>
                 </div>
             </div>
-            <div class="GDF-steps_content_wrapper GDF-step_five" data-close="cl5">
+            <div class="GDF-steps_content_wrapper GDF-step_five" data-close="cl3">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -457,7 +457,7 @@
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
-                                    id="GDF-btn_more_five" data-close="cl5">
+                                    id="GDF-btn_more_three" data-close="cl3">
                                         Learn more
                                     </button>
                                 </div>
@@ -538,10 +538,10 @@
             </div>
         </div>
         <div class="GDF-steps_slide">
-            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_five_slide" data-close="cl6">
+            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_five_slide" data-close="cl5">
                 <div class="GDF-steps_modal_content GDF-steps_modal_five">
                     <div class="GDF-steps_header">
-                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_six" data-close="cl6">
+                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_five" data-close="cl5">
                         </button>
                     </div>
                     <div class="GDF-steps-main">
@@ -575,7 +575,7 @@
                     </div>
                 </div>
             </div>
-            <div class="GDF-steps_content_wrapper GDF-step_five" data-close="cl6">
+            <div class="GDF-steps_content_wrapper GDF-step_five" data-close="cl5">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -598,7 +598,7 @@
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
-                                        id="GDF-btn_more_six" data-close="cl6">
+                                        id="GDF-btn_more_five" data-close="cl5">
                                         Learn more
                                     </button>
                                 </div>
@@ -676,7 +676,7 @@
                                 </ul>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
-                                        id="GDF-btn_more_seven" data-close="cl6">
+                                        id="GDF-btn_more_six" data-close="cl6">
                                         Learn more
                                     </button>
                                 </div>
@@ -890,7 +890,7 @@
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
-                                        id="GDF-btn_more_seven" data-close="cl9">
+                                        id="GDF-btn_more_nine" data-close="cl9">
                                         Learn more
                                     </button>
                                 </div>
@@ -959,7 +959,7 @@
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
-                                    id="GDF-btn_more_eight" data-close="cl10">
+                                    id="GDF-btn_more_ten" data-close="cl10">
                                         Learn more
                                     </button>
                                 </div>
@@ -1300,7 +1300,7 @@
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
-                                        id="GDF-btn_more_ten" data-close="cl12">
+                                        id="GDF-btn_more_twelve" data-close="cl12">
                                         Learn more
                                     </button>
                                 </div>
@@ -1363,7 +1363,7 @@
                                     Once you become an official Utah corporation, make sure you keep your S corp compliant. Remember all important dates and make all necessary payments on time. Know all of the laws regarding the issuing of stocks. Host all necessary annual meetings.
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
-                                    <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more" id="GDF-btn_more_eleven" data-close="cl13">
+                                    <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more" id="GDF-btn_more_thirteen" data-close="cl13">
                                         Learn more
                                     </button>
                                 </div>
