--- a/West-Virginia-SCorp.html
+++ b/West-Virginia-SCorp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Forming an S corp in West Virginia</title>
-    <meta name="description" content="Form an S corp in West Virginia Let GovDocFilling take care of everything for you">
+    <meta name="description" content="Form an S corp in West Virginia Let GovDocFiling take care of everything for you">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="./css/bootstrap-grid.min.css" />
